2006-02-26  Daniel Wagner  <wagi@monom.org>

	* src/avdevice.cpp: Some more refactoring (m_isoInputPlugs and m_isoOutputPlugs
	unified into m_isoPlugs). Discovering of unit external plugs.
	* src/avdevice.h: Likewise.
	* src/avdevicexml.cpp: Likewise.
	* src/avdevicesubunit.cpp: Likewise.
	* src/avdevicesubunit.h: Likewise.
	* src/avplug.cpp: Likewise.
	* src/avplug.h: Likewise.

	* src/libfreebobavc/avc_extended_cmd_generic.h (class UnitPlugAddress): 
	ePT_Unknown enum added.

2006-02-22  Daniel Wagner  <wagi@monom.org>

	*  configure.ac
	src/Makefile.am
        src/avdevice.cpp
        src/avdevice.h
        src/avdevicesubunit.cpp
        src/avdevicesubunit.h
        src/avdevicexml.cpp
        src/avplug.cpp
	src/avplug.h
        src/avplugxml.cpp
        src/libfreebobavc/avc_extended_plug_info.cpp
        src/libfreebobavc/avc_extended_plug_info.h
        src/libfreebobavc/avc_extended_stream_format.cpp
        src/libfreebobavc/avc_extended_stream_format.h
        src/libfreebobavc/avc_plug_info.cpp
        src/libfreebobavc/avc_plug_info.h:
	Refactoring: plug discovering is now part of AvPlug
	instead of AvDevice.
	All plugs of music and audio subunit are now also
	discovered.
	libfreebobavc: Copy constructor added.

	The overhaul is not finished. This is the first
	version which works again.

2006-01-19  Daniel Wagner  <wagi@monom.org>

        * This patch cleans up the external dependency detection for 
	libfreebob. At present, building libfreebob is not possible 
	if libraries are outside the system include/library paths 
	(ie /usr/ and /usr/local). Use the results of pkg-config to 
	specify the correct paths to the automake system.

	Becuase we're using pkgconfig, there's no real need to use 
	AC_CHECK_LIB or AC_CHECK_HEADERS. However, these could 
	potentially be reinstated, but need to be fixed to check in 
	the locations specified by pkgconfig.

	* It is not currently possible to build freebob in a directory 