@@ -1,6 +1,5 @@
 /***************************************************************************
   Copyright (C) 2005 by Pieter Palmers   *
-  ppalmers@joowmp3.lan   *
                                                                         *
   This program is free software; you can redistribute it and/or modify  *
   it under the terms of the GNU General Public License as published by  *
@@ -31,7 +30,7 @@
 
 #include <signal.h>
 
-#include "freebob_streaming.h"
+#include "libfreebob/freebob_streaming.h"
 
 #include "debugtools.h"
 
