@@ -1,3 +1,8 @@
+2006-02-28  Pieter Palmers <pieterpalmers@users.sourceforge.net>
+	* Added the streaming API that was previously hardcoded into the jackd backend
+	  to the library as src/libfreebobstreaming.
+	* Added test programs for the streaming API in tests/streaming
+
 2006-02-26  Daniel Wagner  <wagi@monom.org>
 
 	* src/avdevice.cpp: Some more refactoring (m_isoInputPlugs and m_isoOutputPlugs
